# music_recognition

main_app/: Cargo.toml
main_app/.cargo/: config.toml
main_app/config/: dev.toml
main_app/python_app/: app.py
main_app/scripts/: youtube_downloader.py
main_app/src/: download_helpers.rs  forms.rs  lib.rs  main.rs  migrations.rs  models.rs  my_random.rs  player.rs  shazam.rs  tests.rs  utils.rs  views.rs
main_app/src/migrations/: m_0001_initial.rs  m_0002_auto_20251105_155235.rs  m_0003_auto_20251105_155246.rs  m_0004_auto_20251106_175218.rs
main_app/src/shazam/: fingerprint.rs  spectogram.rs
main_app/templates/: index.html  search.html  upload.html
