
[package]
name = "main_app"
version = "0.1.0"
edition = "2024"
default-run="main_app"


[[bin]]
name="tests"
path="src/tests.rs"


[dependencies]
askama = "0.14"
cot = { version = "0.4.0", features = ["full"] }

realfft = "3.5.0"
num-complex = "0.4"
rust_ffmpeg = "*"  
anyhow = "1" 
serde = "*"
serde_json = "*"
tokio='*'
symphonia = { version = "0.5", features = ["all"] }