
[package]
name = "main_app"
version = "0.1.0"
edition = "2024"
default-run="main_app"


[[bin]]
name="tests"
path="src/tests.rs"


[dependencies]
num-traits = "*"

askama = "0.14"
axum-core={version="0.5.5"}
multer = "3.0"
futures-util = "0.3"

http-body-util = "0.1"
axum = { version = "0.7", features = ["multipart"] }
cot = { version = "0.4.0", features = ["full"] }

realfft = "3.5.0"
num-complex = "0.4"
rust_ffmpeg = "*"  
anyhow = "1" 
serde = "*"
serde_json = "*"
tokio='*'
symphonia = { version = "0.5", features = ["all"] }
rodio = "0.17"
